# moltpredict

./: .env.example  .gitignore  DEPLOY.md  README.md  blockchain-simulator.js  check-balance.js  contract-info.json  deploy-status.js  deploy-to-monad.js  deploy.js  direct-deploy.js  generate-wallet.js  hardhat.config.js  package.json  post-to-moltbook.js  quick-deploy.js  railway.json  server.js  simple-deploy.js  solana-integration.js  vercel.json
api/: auth.js  index.js  markets.js
artifacts/contracts/MoltPredictSimple.sol/: MoltPredict.json
contracts/: MoltPredict.sol  MoltPredictSimple.sol
data/: markets.json  predictions.json  users.json
deployments/: deployment-address.json  monad-status.json
scripts/: deploy.js
solana/: Cargo.toml  README.md
solana/src/: lib.rs
wallets/: platform-wallet.json  wallet-0xFa0698.json
web/: index.html  test.html
