[package]
name = "moltpredict_solana"
version = "1.0.0"
description = "MoltPredict Solana Program - Cross-chain reputation and rewards"
edition = "2021"

[features]
default = []
dev = ["no-entrypoint"]

[dependencies]
solana-program = "2.0.0"
borsh = "0.10"
borsh-derive = "0.10"

[lib]
crate-type = ["cdylib", "lib"]
